--- a/index.html
+++ b/index.html
@@ -109,14 +109,13 @@
 <div class="container">
     <div class="section" id="introduction">
         <h1>歡迎來到Maomy BOT官方網頁！</h1>
-        <h2><a class="button-cool" href="https://discord.com/invite/uesZG4ZfKq">Maomy BOT官方Discord群組</a><p>    </p><a class="button-cool" href="https://lurl.cc/q6SWVc">邀請Maomy BOT</a></h2>
         <p>這個機器人可以幫助您管理伺服器、提供遊戲功能、以及更多其他有趣的功能。</p>
         <div style="background-color: #2a2a2a; color: #ffffff; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
             <!-- 广告图片 --><!-- <img src="https://via.placeholder.com/100x100" alt="广告icon" style="max-width: 40%; height: auto;"> -->
             <div>
                 <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
                 <p style="margin: 0; font-size: 1.1em;">
-                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                    歡迎贊助，加入<a href="https://maomy.com.mp/dc_inviter" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
                 </p>
             </div>
         </div>
@@ -143,7 +142,7 @@
             <div>
                 <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
                 <p style="margin: 0; font-size: 1.1em;">
-                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                    歡迎贊助，加入<a href="https://maomy.com.mp/dc_inviter" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
                 </p>
             </div>
         </div>
