--- a/disclaimer.html
+++ b/disclaimer.html
@@ -85,7 +85,9 @@
 </head>
 <body>
     <header>
-        <a href="https://maomy.com.mp/inviter" class="invite-btn">邀請Bot</a>
+        <a href="https://maomy.com.mp/inviter" class="invite-btn">Bot邀請連結</a>
+        <a href="https://maomy.com.mp/dc_inviter" class="invite-btn">Bot支援群組</a>
+        <a href="https://maomy.wuaze.com/" class="invite-btn">Bot控制面板</a>
         <h1>Maomy BOT 網頁</h1>
     </header>
     
@@ -105,7 +107,7 @@
             <div>
                 <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
                 <p style="margin: 0; font-size: 1.1em;">
-                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                    歡迎贊助，加入<a href="https://maomy.com.mp/dc_inviter" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
                 </p>
             </div>
         </div>
@@ -132,7 +134,7 @@
             <div>
                 <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
                 <p style="margin: 0; font-size: 1.1em;">
-                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                    歡迎贊助，加入<a href="https://maomy.com.mp/dc_inviter" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
                 </p>
             </div>
         </div>
