--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="background.jpg" type="image/jpg" />
-    <meta name="description" content="關於開發者的網站">
-    <meta property="og:image" content="https://maomy.com.mp/background.jpg">
+    <meta name="description" content="關於開發者">
+    <meta property="og:image" content="./background.jpg">
     <title>Maomy BOT 團隊</title>
     <style>
         body {
@@ -85,9 +85,9 @@
 </head>
 <body>
     <header>
-        <a href="https://maomy.com.mp/inviter" class="invite-btn">Bot邀請連結</a>
-        <a href="https://maomy.com.mp/dc_inviter" class="invite-btn">Bot支援群組</a>
-        <a href="https://maomy.wuaze.com/" class="invite-btn">Bot控制面板</a>
+        <a href="./inviter" class="invite-btn">Bot邀請連結</a>
+        <a href="./dc_inviter" class="invite-btn">Bot支援群組</a>
+        <a href="./panel" class="invite-btn">Bot控制面板</a>
         <h1>Maomy BOT 網頁</h1>
     </header>
     
@@ -97,7 +97,7 @@
         <a href="terms.html">服務條款</a>
         <a href="disclaimer.html">免責協議</a>
         <a href="privacy.html">隱私權政策</a>
-        <a href="https://status.maomy.com.mp/">即時狀態</a>
+        <a href="./status">即時狀態</a>
     </nav>
     <div class="container">
         <h1>關於我們</h1>
@@ -125,7 +125,7 @@
             <div>
                 <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
                 <p style="margin: 0; font-size: 1.1em;">
-                    歡迎贊助，加入<a href="https://maomy.com.mp/dc_inviter" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                    歡迎贊助，加入<a href="./dc_inviter" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
                 </p>
             </div>
         </div>
