--- a/inviter.html
+++ b/inviter.html
@@ -5,7 +5,7 @@
     <meta http-equiv="refresh" content="5;url=https://discord.com/oauth2/authorize?client_id=1234058289747333171&permissions=8&integration_type=0&scope=bot">
     <link rel="icon" href="background.jpg" type="image/jpg" />
     <meta name="description" content="趕快邀請MaomyBOT！">
-    <meta property="og:image" content="https://maomy.com.mp/link.png">
+    <meta property="og:image" content="./link.png">
     <title>Maomy BOT邀請連結</title>
     <style>
         body {
