--- a/panel.html
+++ b/panel.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="5;url=https://app.maomy.top">
     <link rel="icon" href="background.jpg" type="image/jpg" />
-    <meta name="description" content="趕快邀請MaomyBOT！">
+    <meta name="description" content="趕快玩面板！">
     <meta property="og:image" content="./link.png">
-    <title>Maomy BOT邀請連結</title>
+    <title>Maomy BOT面板</title>
     <style>
         body {
             background-color: #121212;
@@ -48,7 +48,7 @@
             </p>
         </div>
     </div>
-    <h1>正在導向至<code>Maomy BOT邀請連結</code></h1>
+    <h1>正在導向至<code>Maomy BOT面板</code></h1>
     <p>頁面將在 <span id="countdown">5</span> 秒鐘後重定向。如果沒有，請<a href="https://app.maomy.top">點這</a>。</p>
     <div style="background-color: #2a2a2a; color: #ffffff; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
         <!-- 广告图片 --><!-- <img src="https://via.placeholder.com/100x100" alt="广告icon" style="max-width: 40%; height: auto;"> -->
