--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="background.jpg" type="image/jpg" />
     <meta name="description" content="邀請機器人即可享受更好的管理伺服器方式、RPG系統讓你更好玩、高度自定義、指令採取全伺服器皆用！">
-    <meta property="og:image" content="https://maomy.com.mp/background.jpg">
+    <meta property="og:image" content="./background.jpg">
     <title>隱私權政策</title>
     <style>
         body {
@@ -81,9 +81,9 @@
 <body>
 
 <header>
-    <a href="https://maomy.com.mp/inviter" class="invite-btn">Bot邀請連結</a>
-    <a href="https://maomy.com.mp/dc_inviter" class="invite-btn">Bot支援群組</a>
-    <a href="https://maomy.wuaze.com/" class="invite-btn">Bot控制面板</a>
+    <a href="./inviter" class="invite-btn">Bot邀請連結</a>
+    <a href="./dc_inviter" class="invite-btn">Bot支援群組</a>
+    <a href="./panel" class="invite-btn">Bot控制面板</a>
     <h1>Maomy BOT 網頁</h1>
 </header>
 
@@ -93,7 +93,7 @@
     <a href="terms.html">服務條款</a>
     <a href="disclaimer.html">免責協議</a>
     <a href="privacy.html">隱私權政策</a>
-    <a href="https://status.maomy.com.mp/">即時狀態</a>
+    <a href="./status">即時狀態</a>
 </nav>
 
 <div class="container">
@@ -111,7 +111,7 @@
             <div>
                 <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
                 <p style="margin: 0; font-size: 1.1em;">
-                    歡迎贊助，加入<a href="https://maomy.com.mp/dc_inviter" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                    歡迎贊助，加入<a href="./dc_inviter" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
                 </p>
             </div>
         </div>
@@ -170,7 +170,7 @@
             <div>
                 <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
                 <p style="margin: 0; font-size: 1.1em;">
-                    歡迎贊助，加入<a href="https://maomy.com.mp/dc_inviter" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                    歡迎贊助，加入<a href="./dc_inviter" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
                 </p>
             </div>
         </div>
@@ -229,7 +229,7 @@
             <div>
                 <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
                 <p style="margin: 0; font-size: 1.1em;">
-                    歡迎贊助，加入<a href="https://maomy.com.mp/dc_inviter" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                    歡迎贊助，加入<a href="./dc_inviter" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
                 </p>
             </div>
         </div>
@@ -263,7 +263,7 @@
             <div>
                 <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
                 <p style="margin: 0; font-size: 1.1em;">
-                    歡迎贊助，加入<a href="https://maomy.com.mp/dc_inviter" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                    歡迎贊助，加入<a href="./dc_inviter" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
                 </p>
             </div>
         </div>
